Small fixes on mobile layout

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -455,7 +455,6 @@ body
   h4
     font-weight: 500
   .view-map
-    margin-top: 1em
     box-shadow: 0 1px 1px #333
   .leaflet-control-zoom, .leaflet-control-attribution 
     visibility: hidden
